bootstrap/argocd/argocd-server-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.homefs.biz`)
      priority: 10
      services:
        - name: argocd-server
          port: 8080
