bootstrap/argocd/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.homefs.biz`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
    - kind: Rule
      match: Host(`argocd.homefs.biz`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
